BJS2-45104 update after review